# ImGuiDockTemplate

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json  imgui.ini  main.cpp  vcpkg.json
.cache/clangd/index/: app.hpp.724A4C0DB69B6A67.idx  backends.hpp.8966EE970DCC315C.idx  iapp.hpp.4F12D46A36AA919A.idx  main.cpp.814AFF1FE658996A.idx
include/: app.hpp  backends.hpp  iapp.hpp
